# confluence-spotlight

./: .env.example  .fallowrc.json  .gitignore  README.md  TAD.md  index.html  package.json
.github/workflows/: release.yml
src/: main.ts  markdown.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.beta.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: probe.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  mcp.rs
tests/: harness.ts  keymap.test.ts
