[package]
name = "confluence-spotlight"
version = "0.1.0"
description = "Spotlight desktop client for the Confluence RAG MCP server"
authors = ["HoodieYlya13"]
edition = "2021"

[lib]
name = "confluence_spotlight_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmcp = { version = "1", features = ["client", "transport-streamable-http-client-reqwest", "reqwest"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
dotenvy = "0.15"
