[package]
name = "confluence-spotlight"
version = "0.1.4"
description = "Spotlight desktop client for the Confluence RAG MCP server"
authors = ["HoodieYlya13"]
edition = "2021"

[lib]
name = "confluence_spotlight_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15"

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmcp = { version = "1", features = ["client", "transport-streamable-http-client-reqwest", "reqwest"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
anyhow = "1"
dotenvy = "0.15"
url = "2"
sha2 = "0.10"
base64 = "0.22"
getrandom = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
